# nginx-generator

./: MANIFEST.in  README.md  app.py  setup.cfg  setup.py  test
.github/workflows/: codeql-analysis.yml
src/nginx_generator/: app.py
src/nginx_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/nginx_generator/snippets/: about  php-fpm  proxy_settings
