[metadata]
name = nginx_generator
version = 0.1.4
description = Generate nginx configs interactivly
long_description = file: README.md
long_description_content_type = text/markdown

license = AGPLv3.0-or-later
keywords = nginx, config, configuration, block
author = Oliwerix
author_email = oliwerix@oliwerix.com

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires = 
	click
	validators

[options.entry_points]
console_scripts = 
	nginx-generator = nginx_generator.app:main

[options.packages.find]
where = src

